Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-15 (SVN):
    * sys_unix.c, sys_win.c: Clean up Sys_FindFirstFile/Sys_FindNextFile
      routines.

2011-07-14 (SVN):
    * sys_dos.c: Removed some useless prototypes and tidied it a bit.

2011-07-14 (SVN):
    * enabled dos builds of h2ded.
    * netcomx.c, net_ser.c: Added proper SERVERONLY ifdefs so that they
      compile for h2ded. (Pretty much useless for a server-only build,
      but for completeness only.)

2011-07-14 (SVN):
    * net_main.c: SchedulePollProcedure() may be needed in server-only
      builds too (i.e. dos), so removed the SERVERONLY ifdef around it.

2011-07-13 (SVN):
    * h2ded, host.c (_Host_Frame): Don't allow very long or short frames
      analogous to the client-server application's Host_FilterTime().
      This fixes the sword rack anomalies in the demo2 and village1 maps
      as detailed in bug #3344613:
      http://sourceforge.net/tracker/?func=detail&aid=3344613&group_id=124987&atid=701006
    * Bump beta version/date to 1.5.0-rc6/2011-07-13, update documents.

2011-07-12 (SVN):
    * libs/timidity/instrum_dls.c: Fixed "comparison between signed and
      unsigned integer expressions" warnings.

2011-07-11 (SVN):
    * Added support for libtremor (libvorbisidec) as the integer-only
      libvorbisfile alternative for ogg decoding.
    * Updated compilation instructions document after libtremor support.

2011-07-10 (SVN):
    * hexen2/server/host.c (Host_Init): Execute server.cfg after setting
      host_initialized as true and unlocking the early-read cvars.
    * hexenworld/server/sv_main.c (SV_Init): Likewise.

2011-07-10 (SVN):
    * Fixed many of the "comparison between signed and unsigned integer
      expressions" warnings.

2011-07-10 (SVN):
    * draw.c, gl_draw.c (Draw_ConsoleBackground): Cleaned and simplified
      the function: no need making a copy of the engine signature string.

2011-07-10 (SVN):