@@ -339,7 +339,7 @@ int Sys_rmdir (const char *path)
 
 int Sys_unlink (const char *path)
 {
-	return unlink(path);
+	return remove(path);
 }
 
 int Sys_rename (const char *oldp, const char *newp)
